[GIT] put access token

--- a/.github/workflows/PR_TO_IN_REVIEW.yml
+++ b/.github/workflows/PR_TO_IN_REVIEW.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           project: Projet Mongo Backlog
           column: In Review
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ACCESS_TOKEN }}
