[GIT] Correct github token

--- a/.github/workflows/ISSUES_TO_BRANCH.yml
+++ b/.github/workflows/ISSUES_TO_BRANCH.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Create Issue Branch
         uses: robvanderleek/create-issue-branch@main
         env:
-          repo-token: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
