--- a/.github/workflows/PR_TO_IN_REVIEW.yml
+++ b/.github/workflows/PR_TO_IN_REVIEW.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.8.1
         with:
-          project: Projet Mongo Backlog
+          project: Backlog
           column: In Review
           repo-token: ${{ secrets.ACCESS_TOKEN }}
